# python

./: .gitignore  README.md  pyproject.toml
2023-01-17/: datatypes.py  functions.py
2023-01-24/: main.py  name.py
2023-02-07/: functions.py  lists.py
2023-02-14/: todolist.py
2023-02-16/: review.py
2023-02-28/: computations.py  listlab.py  main.py
2023-03-07/: main.py  voter.py
2023-03-14/: main.py
2023-03-21/: main.py
2023-03-23/: main.py
2023-03-28/: main.py
