[tool.poetry]
name = "pythondev"
version = "0.1.0"
description = ""
authors = ["enchance <enchance@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
icecream = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
