[tool.poetry]
name = "pythondev"
version = "0.1.0"
description = ""
authors = ["enchance <enchance@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
icecream = "^2.1.3"
pyclip = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
